--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 						</executions>
 						<configuration>
 							<serverId>nexus-releases</serverId>
-							<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
+							<nexusUrl>http://192.168.99.100:8081/nexus/</nexusUrl>
 							<skipStaging>true</skipStaging>
 						</configuration>
 					</plugin>
