--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -22,7 +22,7 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
-			<url>http://192.168.99.100:8081/nexus/content/repositories/releases</url>
+			<url>http://localhost:8081/nexus/content/repositories/releases</url>
 		</repository>
 	</distributionManagement>
 
@@ -94,7 +94,7 @@
 						</executions>
 						<configuration>
 							<serverId>nexus-releases</serverId>
-							<nexusUrl>http://192.168.99.100:8081/nexus/</nexusUrl>
+							<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
 							<skipStaging>true</skipStaging>
 						</configuration>
 					</plugin>
