--- a/util/pom.xml
+++ b/util/pom.xml
@@ -13,7 +13,7 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
-			<url>http://localhost:8081/nexus/content/repositories/releases</url>
+			<url>http://localhost:8081/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>
 
@@ -67,7 +67,7 @@
 						</executions>
 						<configuration>
 							<serverId>nexus-releases</serverId>
-							<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
+							<nexusUrl>http://localhost:8081/nexus</nexusUrl>
 							<skipStaging>true</skipStaging>
 						</configuration>
 					</plugin>
