--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -30,7 +28,8 @@
 		<connection>scm:git:https://github.com/ghoshsanjeev/demo.git</connection>
 		<url>http://github.com/ghoshsanjeev/demo</url>
 		<developerConnection>scm:git:https://github.com/ghoshsanjeev/demo.git</developerConnection>
-	</scm>
+	  <tag>v0.0.5</tag>
+  </scm>
 
 	<dependencies>
 		<dependency>
