--- a/util/pom.xml
+++ b/util/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.example</groupId>
 	<artifactId>util</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5-SNAPSHOT</version>
 	<name>util</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -21,7 +21,7 @@
 		<connection>scm:git:https://github.com/ghoshsanjeev/demo.git</connection>
 		<url>http://github.com/ghoshsanjeev/demo</url>
 		<developerConnection>scm:git:https://github.com/ghoshsanjeev/demo.git</developerConnection>
-	  <tag>v0.0.4</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<dependencies>
