dist info in parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 		<developerConnection>scm:git:https://github.com/ghoshsanjeev/demo.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
+	<distributionManagement>
+		<repository>
+			<id>nexus-releases</id>
+			<url>http://localhost:8081/repository/maven-releases</url>
+		</repository>
+	</distributionManagement>
 	
 	<dependencies>
 		<dependency>
