--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -15,6 +15,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<distributionManagement>
@@ -35,11 +37,15 @@
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>util</artifactId>
-			<version>0.0.4</version>
+			<version>0.0.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
