--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.example</groupId>
 	<artifactId>parent</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>parent</name>
@@ -23,7 +23,7 @@
 		<connection>scm:git:https://github.com/ghoshsanjeev/demo.git</connection>
 		<url>http://github.com/ghoshsanjeev/demo</url>
 		<developerConnection>scm:git:https://github.com/ghoshsanjeev/demo.git</developerConnection>
-		<tag>parent-0.0.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
