--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
-	<version>0.0.10-SNAPSHOT</version>
+	<version>0.0.10</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -30,14 +30,14 @@
 		<connection>scm:git:https://github.com/ghoshsanjeev/demo.git</connection>
 		<url>http://github.com/ghoshsanjeev/demo</url>
 		<developerConnection>scm:git:https://github.com/ghoshsanjeev/demo.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>parent-0.0.4</tag>
 	</scm>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>util</artifactId>
-			<version>0.0.8-SNAPSHOT</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
