--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>util</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
